=== master

* Avoid errors when parsing schema in the mock sqlite adapter (jeremyevans)

* Avoid possible thread-safety issue in the timezones support (jeremyevans)

* Handle offsets when typecasting an array or hash to datetime when Sequel.datetime_class = Time (jeremyevans)

* Support Sequel.datetime_class = Time when using the named_timezones extension (jeremyevans)

=== 5.22.0 (2019-07-01)

* Fix Dataset#multi_insert and #import with return: :primary_key on MSSQL when the dataset has a row_proc (jeremyevans) (#1627)

* Support Dataset#with :materialized option on PostgreSQL 12 for [NOT] MATERIALIZED (jeremyevans)

* Make Database#primary_key_sequence work on tables without serial sequences on PostgreSQL 12 (jeremyevans)

* Support ruby 2.7+ startless ranges in the pg_range extension (jeremyevans)

* Support ruby 2.7+ startless, endless ranges in filters, using an always true condition for them (jeremyevans)

* Support ruby 2.7+ startless ranges in filters, using just a <= or < operator for them (jeremyevans)

=== 5.21.0 (2019-06-01)

* Recognize additional DatabaseLockTimeout errors in mysql and mysql2 adapters (jeremyevans)

* Disallow eager_graph of ancestors and descendants associations when using the rcte_tree plugin (jeremyevans)

* Make jdbc/mysql adapter work when using JRuby with Java 11 (jeremyevans)

* Support window function options :window, :exclude, and :frame :type=>:groups, :start, and :end on SQLite 3.28.0+ (jeremyevans)

* Make the server_block extension respect the :servers_hash Database option (jeremyevans)

* Typecast string input for json/jsonb types as JSON strings instead of parsing as JSON in the pg_json extension when Database#typecast_json_strings is set to true (jeremyevans)

* Wrap JSON primitives (string, number, true, false, nil) in the pg_json extension when Database#wrap_json_primitives is set to true (jeremyevans)

* Convert the Database :timeout option to an integer in the sqlite adapter (jeremyevans) (#1620)
